[gd_scene load_steps=2 format=3 uid="uid://basw6y7bihjf0"]

[ext_resource type="Script" path="res://scripts/main_game.gd" id="1_piqdf"]

[node name="MainGame" type="Node2D"]
script = ExtResource("1_piqdf")

[node name="JoinTimeoutTimer" type="Timer" parent="."]
wait_time = 2.0
one_shot = true

[node name="PeerPlayerParent" type="Node2D" parent="."]

[node name="BulletParent" type="Node2D" parent="."]
